feat(main) :hammer: adding first page

--- a/src/presentations/angular-signal/index.html
+++ b/src/presentations/angular-signal/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Without class but with style</title>
+    <title>Angular Signal</title>
     <base href=".." />
     <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="vendor/prismjs/themes/prism.css" />
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-    <p-deck> slide:cover slide:links slide:the-end </p-deck>
+    <img src="img/logo_dark_QmPdj9K.svg" alt="gdglogo" class="gdgLogo" />
+    <p-deck> slide:cover slide:part-one </p-deck>
     <div role="progressbar" class="presentation-progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" title="Presentation progress"></div>
     <div role="toolbar" class="presentation-toolbar">
       <button type="button" class="toggle-mode" title="Toggle speaker mode" aria-label="Toggle speaker mode (Alt-M)">
@@ -36,7 +37,6 @@
     </nav>
     <script type="module" src="js/main.js"></script>
     <script type="module" src="js/presentation.js"></script>
-    <script defer type="module" src="js/blob.js"></script>
     <script defer src="vendor/prismjs/prism.js"></script>
     <script defer src="vendor/prismjs/components/prism-typescript.js"></script>
     <script defer src="vendor/prismjs/components/prism-scss.js"></script>
