--- a/src/presentations/index.html
+++ b/src/presentations/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Without class but with style</title>
+    <title>Angular Signal</title>
     <script>
-      location.href = './css-day/';
+      location.href = './angular-signal/';
     </script>
   </head>
   <body></body>
