--- a/src/presentations/angular-signal/index.html
+++ b/src/presentations/angular-signal/index.html
@@ -6,7 +6,7 @@
   <title>Angular Signal</title>
   <base href=".." />
   <link href="favicon.svg" rel="shortcut icon" type="image/svg+xml" />
-  <link href="vendor/prismjs/themes/prism.css" rel="stylesheet" />
+  <link href="css/prism-one-light.css" rel="stylesheet" />
   <link href="css/main.css" rel="stylesheet" />
   <link href="css/print.css" media="print" rel="stylesheet" />
   <link href="css/presentation.css" rel="stylesheet" />
@@ -18,6 +18,8 @@
   slide:cover
   slide:part-one
   slide:part-two
+  slide:part-three
+  slide:thanks
 </p-deck>
 <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="presentation-progress" role="progressbar"
      title="Presentation progress"></div>
