--- a/angular-signal/index.html
+++ b/angular-signal/index.html
@@ -70,7 +70,7 @@
   <p-note class="my-presentation my-list">
     <h5 class="text-cover">Signal</h5>
     <ul class="long-list" style="margin-bottom: 0.5vh">
-      <li>📌 Ogni singolo signal è chiamato “producer”</li>
+      <li>📌 Ogni singolo signal è chiamato <b>“producer”</b></li>
       <li>📌 Sia i template sia le funzioni che “leggono” i signal (es: <u>computed</u> ed <u>effect</u>) sono chiamati
         <b>“consumer”</b></li>
       <li>📌 Quando questo accade, si crea una “connessione” tra producer <-> consumer simile alla subscription negli
