feat(main): :bug: fix some html

--- a/src/slides/part-two.html
+++ b/src/slides/part-two.html
@@ -5,7 +5,7 @@
   <h1>Todo List</h1>
 </p-slide>
 <p-slide>
-  <p-note class="two-columns" style="align-items: center;">
+  <div class="two-columns" style="align-items: center;">
     <div><img alt="code_05" src="img/export_5.png" style="height: 100vh; transform: scale(0.8)" /></div>
     <div class="two-columns" style="flex-direction: column">
       <img alt="code_06" src="img/export_6.png"
@@ -15,7 +15,7 @@
         tramite il bottone dedicato, evitandoci così di usare la pipe async o altri metodi di sottoscrizione
       </p-note>
     </div>
-  </p-note>
+  </div>
 </p-slide>
 <p-slide class="cover">
   <h1>In sinergia con gli Observable</h1>
