--- a/angular-signal/index.html
+++ b/angular-signal/index.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Angular Signal</title>
   <base href=".." />
-  <link href="favicon.svg" rel="shortcut icon" type="image/svg+xml" />
+  <link href="favicon.ico" rel="shortcut icon" type="image/svg+xml" />
   <link href="css/prism-one-light.css" rel="stylesheet" />
   <link href="css/main.css" rel="stylesheet" />
   <link href="css/print.css" media="print" rel="stylesheet" />
@@ -70,7 +70,7 @@
   <p-note class="my-presentation my-list">
     <h5 class="text-cover">Signal</h5>
     <ul class="long-list" style="margin-bottom: 0.5vh">
-      <li>📌 Ogni singolo signal è chiamato <b>“producer”</b></li>
+      <li>📌 Ogni singolo signal è chiamato “producer”</li>
       <li>📌 Sia i template sia le funzioni che “leggono” i signal (es: <u>computed</u> ed <u>effect</u>) sono chiamati
         <b>“consumer”</b></li>
       <li>📌 Quando questo accade, si crea una “connessione” tra producer <-> consumer simile alla subscription negli
@@ -171,7 +171,7 @@
   <h1>Todo List</h1>
 </p-slide>
 <p-slide>
-  <p-note class="two-columns" style="align-items: center;">
+  <div class="two-columns" style="align-items: center;">
     <div><img alt="code_05" src="img/export_5.png" style="height: 100vh; transform: scale(0.8)" /></div>
     <div class="two-columns" style="flex-direction: column">
       <img alt="code_06" src="img/export_6.png"
@@ -181,7 +181,7 @@
         tramite il bottone dedicato, evitandoci così di usare la pipe async o altri metodi di sottoscrizione
       </p-note>
     </div>
-  </p-note>
+  </div>
 </p-slide>
 <p-slide class="cover">
   <h1>In sinergia con gli Observable</h1>
