fix(main): :bug: fix some style issue

--- a/src/slides/part-one.html
+++ b/src/slides/part-one.html
@@ -32,7 +32,7 @@
     </ul>
 
   </p-note>
-  <img alt="qr" src="img/export_1.png" style="padding-top: 5vh" />
+  <img alt="qr" src="img/export_1.png" />
 </p-slide>
 <p-slide class="two-columns-flex-start">
   <p-note class="my-presentation my-list">
@@ -53,7 +53,7 @@
       <li>📌 I consumer sono memoized by default.</li>
     </ul>
   </p-note>
-  <img alt="qr" src="img/export_1.png" style="padding-top: 5vh" />
+  <img alt="qr" src="img/export_1.png" />
 </p-slide>
 <p-slide class="two-columns-flex-start" style="flex-direction: row;flex-wrap: nowrap;">
   <p-note class="my-presentation my-list">
