--- a/src/slides/part-three.html
+++ b/src/slides/part-three.html
@@ -13,7 +13,7 @@
     </ul>
 
   </p-note>
-  <p-note style="font-size: 4vh;">
+  <p-note style="font-size: 0.5em;">
     <pre class="self-center language-javascript" style="border: 1px solid #101099"> <code> export class InputComponent {
       firstName = input&lt;string>();
       // required inputs
@@ -32,7 +32,7 @@
     </ul>
 
   </p-note>
-  <p-note style="font-size: 4vh;">
+  <p-note style="font-size: 0.5em;">
     <pre class="self-center language-javascript" style="border: 1px solid #101099"><code>export class InputComponent {
   firstName = input&lt;number, string>(0, {
   </code> <p-fragment><code>alias: 'first',
@@ -58,7 +58,7 @@
     </ul>
 
   </p-note>
-  <p-note style="font-size: 4vh;">
+  <p-note style="font-size: 0.5em;">
     <pre class="self-center language-javascript" style="border: 1px solid #101099">
       <code>
   @Component({
